GSLT/src/test/module/bad/BadFreeVar.module
Module BadFreeVar {
  Theory Baz() = {
    Exports {
      Term;
    }
    Terms {
      Foo . Term ::= "Foo" "Charlie";
      Bar . Term ::= "Bar" "Foxtrot";
    }
    Equations {}
    Rewrites {
      Baz: (Foo x) ~> (Bar y);
    }
  }
}
